--- a/src/main/webapp/pages/alumnoPage.html
+++ b/src/main/webapp/pages/alumnoPage.html
@@ -6,11 +6,11 @@
     <title>Document</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen bg-[url('assets/fondo.png')]">
+<body class="h-screen bg-[url('../assets/fondo.png')]">
     <nav class="bg-white border-gray-200 dark:bg-[#7A4A2F]">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="assets/logo.jpg" class="h-8" alt="Flowbite Logo" />
+            <img src="../assets/logo.jpg" class="h-8" alt="Flowbite Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">BookCafe</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -22,10 +22,10 @@
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-[#7A4A2F] dark:border-gray-700">
             <li>
-                <a href="index.html" class="block text-xl py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-[#FFD6BE]" aria-current="page">Inicio</a>
+                <a href="alumnoPage.html" class="block text-xl py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-[#FFD6BE]" aria-current="page">Inicio</a>
             </li>
             <li>
-                <a href="estadistica.html" class="block text-xl py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-[#FFD6BE] dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Estadísticas</a>
+                <a href="estadisticaPage.html" class="block text-xl py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-[#FFD6BE] dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Estadísticas</a>
             </li>
             <li>
                 <a href="#" class="block text-xl py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-[#FFD6BE] dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Salir</a>
@@ -34,6 +34,8 @@
         </div>
         </div>
     </nav>  
+
+    
     <div class="flex items-center">
         <div class="md:container md:mx-auto mt-10 px-20 w-full h-[80vh] bg-[#FFD6BE] rounded-2xl ">
             <form>   
@@ -48,11 +50,11 @@
                 </div>
             </form>
             <div class="border-">
-                <div class="mt-10">
+                <div class="mt-10 text-2xl">
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste perspiciatis architecto necessitatibus odit perferendis eius excepturi totam accusantium dolor cumque officia, sapiente exercitationem aliquid, obcaecati nulla alias iusto commodi minima.</p>
                 </div>
-                <div class="mt-5 w-50">
-                    <button type="submit" class="text-xl  text-white bg-[#7A4A2F] hover:bg-[#3B1B09]  rounded-lg px-4 py-2">Abrir</button>
+                <div class="mt-5">
+                    <button type="submit" class="w-40 h-14 text-2xl  text-white bg-[#7A4A2F] hover:bg-[#3B1B09]  rounded-lg px-4 py-2">Abrir</button>
                 </div>
             </div>
         </div>
