--- a/src/main/webapp/pages/estadisticaPage.html
+++ b/src/main/webapp/pages/estadisticaPage.html
@@ -6,11 +6,11 @@
     <title>Estadísticas</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="h-screen bg-[url('assets/fondo.png')]">
+<body class="h-screen bg-[url('../assets/fondo.png')]">
     <nav class="bg-white border-gray-200 dark:bg-[#7A4A2F]">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-            <img src="assets/logo.jpg" class="h-8" alt="Flowbite Logo" />
+            <img src="../assets/logo.jpg" class="h-8" alt="Flowbite Logo" />
             <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">BookCafe</span>
         </a>
         <button data-collapse-toggle="navbar-default" type="button" class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-gray-500 rounded-lg md:hidden hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200 dark:text-gray-400 dark:hover:bg-gray-700 dark:focus:ring-gray-600" aria-controls="navbar-default" aria-expanded="false">
@@ -22,10 +22,10 @@
         <div class="hidden w-full md:block md:w-auto" id="navbar-default">
             <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-gray-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-gray-800 md:dark:bg-[#7A4A2F] dark:border-gray-700">
             <li>
-                <a href="index.html" class="block text-xl py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-[#FFD6BE] dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Inicio</a>
+                <a href="alumnoPage.html" class="block text-xl py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-[#FFD6BE] dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Inicio</a>
             </li>
             <li>
-                <a href="estadistica.html" class="block text-xl py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-[#FFD6BE]" aria-current="page">Estadísticas</a>
+                <a href="estadisticaPage.html" class="block text-xl py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 dark:text-white md:dark:text-[#FFD6BE]" aria-current="page">Estadísticas</a>
             </li>
             <li>
                 <a href="#" class="block text-xl py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-white md:dark:hover:text-[#FFD6BE] dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Salir</a>
@@ -34,8 +34,22 @@
         </div>
         </div>
     </nav>
-
-    <section class=" py-8mt-10 flex items-center">
+    <section class="py-8mt-10 flex items-center justify-center">
+        <div class="max-w-screen-xl rounded-2xl py-10 mx-10 px-4 sm:px-6 lg:px-8 bg-[#FFD6BE] mt-10 flex gap-5">
+            <div class="w-1/3">
+                    <img src="../assets/perfil.png" alt="Foto de perfil" class="h-40 w-40 rounded-full">
+                </div>
+                <div class="w-2/3">
+                    <div class="">
+                        <h2 class="text-2xl font-bold">Nombre de usuario</h2>
+                        <p class="text-lg">Nombres: <span class="font-bold">Nombre del alumno</span></p>
+                        <p class="text-lg">Apellidos: <span class="font-bold">Apellidos del alumno</span></p>
+                        <p class="text-lg">Fecha de nacimiento: <span class="font-bold">Fecha de nacimiento</span></p>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <section class="py-8mt-10 flex items-center justify-center">
         <div class="max-w-screen-xl rounded-2xl py-10 mx-10 px-4 sm:px-6 lg:px-8 bg-[#FFD6BE] mt-10">
             <div class="lg:text-center">
                 <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-black sm:text-4xl">
